added some features for plotting and status updates